--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Segurança Virtual</title>
-    <script src="/Javascript_dia35.js"></script>
+    <script src="./js/script.js"></script>
   </head>
   <body>
     <h1>Festa VIP</h1>
